@@ -33,8 +33,11 @@ ini_set ('session.entropy_length', '32');         // Increase the length of entr
 ini_set ('session.hash_function', 'sha1');        // We are going to switch this to sha512 for release, it brings far improved reduction for session collision
 ini_set ('url_rewriter.tags', '');                // Ensure that the session id is *not* passed on the url - this is a possible security hole for logins - including admin.
 date_default_timezone_set ('UTC');                // Set to your server's local time zone - PHP throws a notice if this is not set.
-mb_http_output ("UTF-8");                         // Specify that our output should be served in UTF-8, even if the PHP file served from isn't correctly saved in UTF-8.
-mb_internal_encoding ("UTF-8");                   // On many systems, this defaults to ISO-8859-1. We are explicitly a UTF-8 code base, with Unicode language variables. So set it manually.
+if (extension_loaded ('mbstring'))                // Ensure that we don't trigger an error if the mbstring extension is not loaded
+{
+    mb_http_output ("UTF-8");                     // Specify that our output should be served in UTF-8, even if the PHP file served from isn't correctly saved in UTF-8.
+    mb_internal_encoding ("UTF-8");               // On many systems, this defaults to ISO-8859-1. We are explicitly a UTF-8 code base, with Unicode language variables. So set it manually.
+}
 
 $bntreg = new BntRegistry ();
 $BenchmarkTimer = new Timer;
